Add file attachment support for document question answering, summaries, etc.

--- a/slack-manifest-template.json
+++ b/slack-manifest-template.json
@@ -22,7 +22,8 @@
         "channels:history",
         "app_mentions:read",
         "users:read",
-        "groups:history"
+        "groups:history",
+        "files:read"
       ]
     }
   },
