Use slack user email address as Amazon Q userId when EnterpriseQUserId is set to empty value

--- a/slack-manifest-template.json
+++ b/slack-manifest-template.json
@@ -22,6 +22,7 @@
         "channels:history",
         "app_mentions:read",
         "users:read",
+        "users:read.email",
         "groups:history",
         "files:read"
       ]
