Add a new api and lambda function for handling slack slash command events

--- a/slack-manifest-template.json
+++ b/slack-manifest-template.json
@@ -12,7 +12,7 @@
     "slash_commands": [
       {
           "command": "/new_conversation",
-          "url": "!!! [SlackEventHandlerApiOutput] !!!",
+          "url": "!!! [SlackCommandApiOutput] !!!",
           "description": "Start a new conversation",
           "should_escape": false
       }
