--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my_enterprise_q_slack_bot",
+  "name": "my_amazon_q_slack_bot",
   "version": "0.1.0",
   "bin": {
-    "my_enterprise_q_slack_bot": "bin/my_enterprise_q_slack_bot.js"
+    "my_enterprise_q_slack_bot": "bin/my_amazon_q_slack_bot.js"
   },
   "scripts": {
     "build": "tsc",
@@ -14,27 +14,27 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.10",
     "@types/node": "10.17.27",
     "@types/pako": "^2.0.0",
     "@types/prettier": "2.6.0",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "aws-cdk": "2.44.0",
+    "aws-cdk": "^2.110.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.0.0",
     "prettier": "^3.0.3",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.6.3"
   },
   "dependencies": {
     "@slack/web-api": "^6.10.0",
     "@types/aws-lambda": "^8.10.119",
-    "aws-cdk-lib": "^2.95.1",
+    "aws-cdk-lib": "^2.110.1",
     "aws-sdk": "^2.1452.0",
     "constructs": "^10.0.0",
     "pako": "^2.1.0",
