--- a/package.json
+++ b/package.json
@@ -29,14 +29,20 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "~4.6.3"
+    "typescript": "~4.6.3",
+    "jszip": "^3.10.1"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.465.0",
+    "@aws-sdk/client-s3": "^3.465.0",
+    "@aws-sdk/lib-dynamodb": "^3.465.0",
     "@slack/web-api": "^6.10.0",
     "@types/aws-lambda": "^8.10.119",
+    "archiver": "^6.0.1",
     "aws-cdk-lib": "^2.110.1",
     "aws-sdk": "^2.1452.0",
     "constructs": "^10.0.0",
+    "jszip": "^3.10.1",
     "pako": "^2.1.0",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.1",
