fix lint/prettier configuration to a_ include bin directory, b) exclude cdk.out and build directories, c) to include javascript files. Run linter and apply fixes on source

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,8 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "env": {
+    "node": true
+  }
 }
