fix lint/prettier configuration to a_ include bin directory, b) exclude cdk.out and build directories, c) to include javascript files. Run linter and apply fixes on source

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,13 @@
   ],
   "env": {
     "node": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
