--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.0.0",
+    "jszip": "^3.10.1",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "~4.6.3",
-    "jszip": "^3.10.1"
+    "typescript": "~4.6.3"
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.465.0",
+    "@aws-sdk/client-qbusiness": "^3.470.0",
     "@aws-sdk/client-s3": "^3.465.0",
     "@aws-sdk/lib-dynamodb": "^3.465.0",
     "@slack/web-api": "^6.10.0",
