--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my_amazon_q_slack_bot",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "bin": {
     "my_enterprise_q_slack_bot": "bin/my_amazon_q_slack_bot.js"
   },
@@ -15,13 +15,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.10",
-    "@types/node": "10.17.27",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.7",
     "@types/pako": "^2.0.0",
     "@types/prettier": "2.6.0",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "aws-cdk": "^2.110.1",
+    "esbuild": "^0.20.2",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -33,9 +35,13 @@
     "typescript": "~4.6.3"
   },
   "dependencies": {
+    "@aws-crypto/client-node": "^4.0.0",
     "@aws-sdk/client-cloudformation": "^3.465.0",
-    "@aws-sdk/client-qbusiness": "^3.470.0",
+    "@aws-sdk/client-qbusiness": "^3.565.0",
     "@aws-sdk/client-s3": "^3.465.0",
+    "@aws-sdk/client-secrets-manager": "^3.565.0",
+    "@aws-sdk/client-sso-oidc": "^3.565.0",
+    "@aws-sdk/client-sts": "^3.565.0",
     "@aws-sdk/lib-dynamodb": "^3.465.0",
     "@slack/web-api": "^6.10.0",
     "@types/aws-lambda": "^8.10.119",
@@ -43,8 +49,10 @@
     "aws-cdk-lib": "^2.110.1",
     "aws-sdk": "^2.1452.0",
     "constructs": "^10.0.0",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "pako": "^2.1.0",
+    "qs": "^6.10.1",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.1",
     "winston": "^3.10.0"
